@@ -1,3 +1,12 @@
+2003-10-29  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
+
+	* dccsend.c (send_file): after sending the file, read from network
+	until remote closes connection. Fixes sending files to a MIRC DCC
+	server.
+
+	* dccsend.c (main): add undocumented -d flag which spews some
+	debugging output.
+
 2003-10-28  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
 
 	* dccsend.c (main_loop): if remotenick has not been specified,
